--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,4 +3,11 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
+
+}
+
+.bg-image {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
