--- a/sass/style.css
+++ b/sass/style.css
@@ -6,16 +6,55 @@
           box-sizing: border-box;
 }
 
+.bg-image {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 body {
   font-family: "Baloo 2", cursive;
+}
+
+.bg-image {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.title {
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 1;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
+
+.container {
+  padding: 6% 8%;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    padding: 5%;
+  }
 }
 
 .hero {
   height: 80vh;
   background-image: url(../img/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .hero .hero-text {
@@ -29,12 +68,17 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 20% 10%;
   width: 50%;
   line-height: 1;
-  background-color: rgba(235, 72, 75, 0.8);
   height: 100%;
+  background-color: rgba(235, 72, 75, 0.8);
   color: #fff;
+}
+
+@media (max-width: 600px) {
+  .hero .hero-text {
+    width: 100%;
+  }
 }
 
 .hero .hero-text .hero-title {
@@ -44,14 +88,44 @@ body {
   margin-bottom: 20px;
 }
 
-.hero .hero-text .paragraph {
+@media (max-width: 1024px) {
+  .hero .hero-text .hero-title {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero .hero-text .hero-title {
+    font-size: 3.25rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero .hero-text .hero-title {
+    font-size: 2.5rem;
+  }
+}
+
+.hero .paragraph {
   line-height: 1.7;
+}
+
+@media (max-width: 600px) {
+  .hero .paragraph {
+    width: 70%;
+  }
 }
 
 .section-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 600px) {
+  .section-1 {
+    display: block;
+  }
 }
 
 .section-1 .column {
@@ -61,19 +135,26 @@ body {
 
 .section-1 .column-1 {
   background-color: #e0e5eb;
-  padding: 6% 8%;
 }
 
 .section-1 .column-1 .title {
-  font-size: 3rem;
-  font-weight: 400;
   width: 60%;
-  line-height: 1;
-  margin-bottom: 20px;
+}
+
+@media (max-width: 600px) {
+  .section-1 .column-1 .title {
+    width: 80%;
+  }
 }
 
 .section-1 .column-1 .paragraph {
   margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .section-1 .column-1 .paragraph {
+    margin-bottom: 40px;
+  }
 }
 
 .section-1 .column-1 .btn {
@@ -93,9 +174,12 @@ body {
 .section-1 .column-2 {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(235, 72, 75, 0.8))), url(../img/section1.jpg);
   background-image: linear-gradient(rgba(235, 72, 75, 0.8)), url(../img/section1.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+}
+
+@media (max-width: 600px) {
+  .section-1 .column-2 {
+    display: none;
+  }
 }
 
 .section-2 {
@@ -104,29 +188,78 @@ body {
   display: flex;
 }
 
+@media (max-width: 600px) {
+  .section-2 {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .section-2 .img-div {
   height: 500px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   -ms-flex-preferred-size: 25%;
       flex-basis: 25%;
+}
+
+@media (max-width: 768px) {
+  .section-2 .img-div {
+    height: 360px;
+  }
+}
+
+@media (max-width: 600px) {
+  .section-2 .img-div {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media (max-width: 375px) {
+  .section-2 .img-div {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    height: 300px;
+  }
 }
 
 .section-2 .img-div-1 {
   background-image: url(../img/img1Desktop.jpg);
 }
 
+@media (max-width: 768px) {
+  .section-2 .img-div-1 {
+    background-image: url(../img/img1Mobile.jpg);
+  }
+}
+
 .section-2 .img-div-2 {
   background-image: url(../img/img2Desktop.jpg);
+}
+
+@media (max-width: 768px) {
+  .section-2 .img-div-2 {
+    background-image: url(../img/img2Mobile.jpg);
+  }
 }
 
 .section-2 .img-div-3 {
   background-image: url(../img/img3Desktop.jpg);
 }
 
+@media (max-width: 768px) {
+  .section-2 .img-div-3 {
+    background-image: url(../img/img3Mobile.jpg);
+  }
+}
+
 .section-2 .img-div-4 {
   background-image: url(../img/img4Desktop.jpg);
+}
+
+@media (max-width: 768px) {
+  .section-2 .img-div-4 {
+    background-image: url(../img/img4Mobile.jpg);
+  }
 }
 
 .section-4 {
@@ -135,16 +268,15 @@ body {
   display: flex;
 }
 
-.section-4 .column-text {
-  color: #fff;
+@media (max-width: 600px) {
+  .section-4 {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
-.section-4 .column-text .title {
-  line-height: 1;
-  margin-bottom: 20px;
-  font-weight: 400;
-  font-size: 2rem;
-  text-transform: capitalize;
+.section-4 .column-text {
+  color: #fff;
 }
 
 .section-4 .column-1 {
@@ -152,16 +284,32 @@ body {
       flex-basis: 25%;
   text-align: left;
   background-color: #eb484b;
-  padding: 6% 4% 6% 8%;
+}
+
+@media (max-width: 600px) {
+  .section-4 .column-1 {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media (max-width: 375px) {
+  .section-4 .column-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .section-4 .column-2 {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   background-image: url(../img/section3Desktop.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+}
+
+@media (max-width: 600px) {
+  .section-4 .column-2 {
+    display: none;
+  }
 }
 
 .section-4 .column-3 {
@@ -169,7 +317,20 @@ body {
       flex-basis: 25%;
   text-align: right;
   background-color: #3e729a;
-  padding: 6% 8% 6% 4%;
+}
+
+@media (max-width: 600px) {
+  .section-4 .column-3 {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media (max-width: 375px) {
+  .section-4 .column-3 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .section-4 .column-3 .title {
@@ -184,20 +345,40 @@ body {
   display: flex;
 }
 
+@media (max-width: 600px) {
+  .section-5 {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .section-5 .column-1 {
   -ms-flex-preferred-size: 70%;
       flex-basis: 70%;
   height: 600px;
   background-image: url(../img/section4Desktop.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+}
+
+@media (max-width: 600px) {
+  .section-5 .column-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    background-image: url(../img/section4Mobile.jpg);
+    height: 450px;
+    flex-basis: 100%;
+  }
 }
 
 .section-5 .column-2 {
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
   background-color: #2a2f33;
+}
+
+@media (max-width: 600px) {
+  .section-5 .column-2 {
+    display: none;
+  }
 }
 
 .section-5 .column-floating {
@@ -213,12 +394,27 @@ body {
   text-align: right;
 }
 
-.section-5 .column-floating .title {
-  line-height: 1;
-  margin-bottom: 20px;
-  font-weight: 400;
-  font-size: 2rem;
-  text-transform: capitalize;
+@media (max-width: 1024px) {
+  .section-5 .column-floating {
+    width: 40%;
+  }
+}
+
+@media (max-width: 600px) {
+  .section-5 .column-floating {
+    width: 50%;
+  }
+}
+
+@media (max-width: 375px) {
+  .section-5 .column-floating {
+    width: 80%;
+    top: 50%;
+    right: 50%;
+    -webkit-transform: translate(50%, -50%);
+            transform: translate(50%, -50%);
+    padding: 24px 16px;
+  }
 }
 
 .section-5 .column-floating .paragraph {
@@ -245,22 +441,29 @@ body {
   display: flex;
 }
 
+@media (max-width: 600px) {
+  .section-6 {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .section-6 .column {
-  padding: 6% 8%;
   color: #fff;
 }
 
 .section-6 .column .title {
-  font-size: 3rem;
-  font-weight: 400;
   width: 60%;
-  line-height: 1;
-  margin-bottom: 20px;
-  text-transform: capitalize;
 }
 
 .section-6 .column .paragraph {
   margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .section-6 .column .paragraph {
+    margin-bottom: 40px;
+  }
 }
 
 .section-6 .column .btn {
@@ -284,11 +487,25 @@ body {
       flex-basis: 50%;
 }
 
+@media (max-width: 600px) {
+  .section-6 .column-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
 .section-6 .column-2 {
   background-color: #3e729a;
   text-align: right;
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
+}
+
+@media (max-width: 600px) {
+  .section-6 .column-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .section-6 .column-2 .title {
@@ -299,25 +516,33 @@ body {
 .footer {
   background-color: #2a2f33;
   color: #e0e5eb;
-  padding: 6% 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
+@media (max-width: 600px) {
+  .footer {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .footer .title {
-  font-size: 3rem;
-  font-weight: 400;
   width: 60%;
-  line-height: 1;
-  margin-bottom: 20px;
-  text-transform: capitalize;
 }
 
 .footer .column-1 {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   padding-right: 8%;
+}
+
+@media (max-width: 600px) {
+  .footer .column-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .footer .column-1 form {
@@ -340,7 +565,7 @@ body {
 
 .footer .column-1 form .form-row textarea {
   resize: none;
-  height: 120px;
+  height: 160px;
 }
 
 .footer .column-1 form ::-webkit-input-placeholder,
@@ -382,6 +607,15 @@ body {
   padding-left: 8%;
 }
 
+@media (max-width: 600px) {
+  .footer .column-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    padding-left: 0;
+    margin-top: 40px;
+  }
+}
+
 .footer .column-2 ul {
   list-style: none;
   margin-bottom: 40px;
@@ -399,11 +633,7 @@ body {
   margin-right: 12px;
 }
 
-.footer .column-2 .info h3 {
-  font-size: 3rem;
-  font-weight: 400;
-  line-height: 1;
-  margin-bottom: 20px;
-  text-transform: capitalize;
+.footer .column-2 li:last-child a:hover {
+  color: #eb484b;
 }
 /*# sourceMappingURL=style.css.map */
